--- a/package.json
+++ b/package.json
@@ -6,18 +6,19 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web --port 8082"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.1.3",
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "expo": "~50.0.0",
     "expo-status-bar": "~1.11.1",
+    "lucide-react-native": "^0.322.0",
     "react": "18.2.0",
-    "react-native": "0.73.4",
-    "react-native-web": "~0.19.6",
     "react-dom": "18.2.0",
-    "@react-native-async-storage/async-storage": "1.21.0",
-    "@expo/vector-icons": "^14.0.0",
-    "lucide-react-native": "^0.322.0"
+    "react-native": "0.73.4",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
