--- a/app.json
+++ b/app.json
@@ -4,27 +4,15 @@
     "slug": "ios-budget-pwa",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
     "userInterfaceStyle": "automatic",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
     "assetBundlePatterns": [
       "**/*"
     ],
     "ios": {
       "supportsTablet": true
     },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
-    },
+    "android": {},
     "web": {
-      "favicon": "./assets/favicon.png",
       "display": "standalone",
       "themeColor": "#007AFF",
       "backgroundColor": "#F2F2F7",
