--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.21.0",
     "expo": "~50.0.0",
+    "expo-font": "~11.10.3",
+    "expo-modules-core": "~1.11.14",
     "expo-status-bar": "~1.11.1",
     "lucide-react-native": "^0.322.0",
     "react": "18.2.0",
